# Basic2DCollision

./: .gitignore  CMakeLists.txt  README.md
src/: CollisionDetector.cpp  CollisionDetector.h  Game.cpp  Game.h  main.cpp
src/Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/Level/: Level.cpp  Level.h
src/ResourceHandler/: ResourceHandler.h
src/States/: DummyState.cpp  DummyState.h  State.cpp  State.h
